added command support

--- a/Source/MyShortCodes/MyShortCodes.Phone.Tests/MyShortCodes.Phone.Tests.csproj
+++ b/Source/MyShortCodes/MyShortCodes.Phone.Tests/MyShortCodes.Phone.Tests.csproj
@@ -91,6 +91,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\Messaging\CommandBusTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Infrastructure\Container\MicroMapTests.cs" />
   </ItemGroup>
