--- a/Source/MyShortCodes/MyShortCodes.Phone/MyShortCodes.Phone.csproj
+++ b/Source/MyShortCodes/MyShortCodes.Phone/MyShortCodes.Phone.csproj
@@ -41,6 +41,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Phone" />
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
@@ -48,20 +49,30 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandHandlers\AddNewShortCodeCommandHandler.cs" />
     <Compile Include="CommandHandlers\ApplicationLoadedCommandHandler.cs" />
+    <Compile Include="CommandHandlers\EditShortCodeCommandHandler.cs" />
     <Compile Include="CommandHandlers\MainPageLoadedCommandHandler.cs" />
+    <Compile Include="CommandHandlers\SaveShortCodeCommandHandler.cs" />
+    <Compile Include="CommandHandlers\SendSmsCommandHandler.cs" />
+    <Compile Include="Commands\AddNewShortCodeCommand.cs" />
     <Compile Include="Commands\ApplicationLoadedCommand.cs" />
+    <Compile Include="Commands\EditShortCodeCommand.cs" />
     <Compile Include="Commands\MainPageLoadedCommand.cs" />
+    <Compile Include="Commands\SaveShortCodeCommand.cs" />
+    <Compile Include="Commands\SendSmsCommand.cs" />
     <Compile Include="Domain\ShortCode.cs" />
     <Compile Include="Infrastructure\BindableObject.cs" />
     <Compile Include="Infrastructure\Container\MicroMap.cs" />
     <Compile Include="Infrastructure\Messaging\ICommand.cs" />
     <Compile Include="Infrastructure\Messaging\ICommandBus.cs" />
     <Compile Include="Infrastructure\Messaging\ICommandHandler.cs" />
+    <Compile Include="Navigation\NavigationServiceWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\ApplicationState.cs" />
     <Compile Include="Storage\SettingsManager.cs" />
     <Compile Include="Storage\StorageManager.cs" />
+    <Compile Include="ViewModels\AddPageViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
