--- a/Source/MyShortCodes/MyShortCodes.Phone/MyShortCodes.Phone.csproj
+++ b/Source/MyShortCodes/MyShortCodes.Phone/MyShortCodes.Phone.csproj
@@ -51,12 +51,14 @@
   <ItemGroup>
     <Compile Include="CommandHandlers\AddNewShortCodeCommandHandler.cs" />
     <Compile Include="CommandHandlers\ApplicationLoadedCommandHandler.cs" />
+    <Compile Include="CommandHandlers\DeleteShortCodeCommandHandler.cs" />
     <Compile Include="CommandHandlers\EditShortCodeCommandHandler.cs" />
     <Compile Include="CommandHandlers\MainPageLoadedCommandHandler.cs" />
     <Compile Include="CommandHandlers\SaveShortCodeCommandHandler.cs" />
     <Compile Include="CommandHandlers\SendSmsCommandHandler.cs" />
     <Compile Include="Commands\AddNewShortCodeCommand.cs" />
     <Compile Include="Commands\ApplicationLoadedCommand.cs" />
+    <Compile Include="Commands\DeleteShortCodeCommand.cs" />
     <Compile Include="Commands\EditShortCodeCommand.cs" />
     <Compile Include="Commands\MainPageLoadedCommand.cs" />
     <Compile Include="Commands\SaveShortCodeCommand.cs" />
@@ -69,9 +71,13 @@
     <Compile Include="Infrastructure\Messaging\ICommandHandler.cs" />
     <Compile Include="Navigation\NavigationServiceWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IDialogService.cs" />
     <Compile Include="State\ApplicationState.cs" />
     <Compile Include="Storage\SettingsManager.cs" />
     <Compile Include="Storage\StorageManager.cs" />
+    <Compile Include="Validation\IValidator.cs" />
+    <Compile Include="Validation\ShortCodeValidator.cs" />
+    <Compile Include="Validation\ValidationResult.cs" />
     <Compile Include="ViewModels\AddPageViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
   </ItemGroup>
