--- a/Source/MyShortCodes/MyShortCodes.Phone.UI/MyShortCodes.Phone.UI.csproj
+++ b/Source/MyShortCodes/MyShortCodes.Phone.UI/MyShortCodes.Phone.UI.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\Threads\UIThreadInvoker.cs" />
     <Compile Include="Views\AddPage.xaml.cs">
       <DependentUpon>AddPage.xaml</DependentUpon>
     </Compile>
@@ -99,7 +100,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\appbar_add.png" />
-    <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyShortCodes.Phone\MyShortCodes.Phone.csproj">
