--- a/Source/MyShortCodes/MyShortCodes.Phone/MyShortCodes.Phone.csproj
+++ b/Source/MyShortCodes/MyShortCodes.Phone/MyShortCodes.Phone.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="CommandHandlers\AddNewShortCodeCommandHandler.cs" />
     <Compile Include="CommandHandlers\ApplicationLoadedCommandHandler.cs" />
+    <Compile Include="CommandHandlers\DataLoadedCommandHandler.cs" />
     <Compile Include="CommandHandlers\DeleteShortCodeCommandHandler.cs" />
     <Compile Include="CommandHandlers\EditShortCodeCommandHandler.cs" />
     <Compile Include="CommandHandlers\MainPageLoadedCommandHandler.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="CommandHandlers\SendSmsCommandHandler.cs" />
     <Compile Include="Commands\AddNewShortCodeCommand.cs" />
     <Compile Include="Commands\ApplicationLoadedCommand.cs" />
+    <Compile Include="Commands\DataLoadedMessage.cs" />
     <Compile Include="Commands\DeleteShortCodeCommand.cs" />
     <Compile Include="Commands\EditShortCodeCommand.cs" />
     <Compile Include="Commands\MainPageLoadedCommand.cs" />
@@ -69,6 +71,7 @@
     <Compile Include="Infrastructure\Messaging\ICommand.cs" />
     <Compile Include="Infrastructure\Messaging\ICommandBus.cs" />
     <Compile Include="Infrastructure\Messaging\ICommandHandler.cs" />
+    <Compile Include="Infrastructure\Threads\IUIThreadInvoker.cs" />
     <Compile Include="Navigation\NavigationServiceWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IDialogService.cs" />
