extracted infrastructure to mangifera

--- a/Source/MyShortCodes/MyShortCodes.Phone.UI/MyShortCodes.Phone.UI.csproj
+++ b/Source/MyShortCodes/MyShortCodes.Phone.UI/MyShortCodes.Phone.UI.csproj
@@ -48,6 +48,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mangifera">
+      <HintPath>..\..\..\Lib\Mangifera\Mangifera.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Controls" />
     <Reference Include="Microsoft.Phone.Controls.Toolkit, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604, processorArchitecture=MSIL" />
